# dbus-code-example

./: README.md
GDBus-demo/: CMakeLists.txt  README.md
GDBus-demo-001_wang/interface-w/: hello.xml
GDBus-demo/client/: CMakeLists.txt  libClient.c
GDBus-demo/example/: CMakeLists.txt
GDBus-demo/gdbus/: CMakeLists.txt
GDBus-demo/server/: CMakeLists.txt  libServer.c  libServer.h
dbus_w/: Makefile  cmd.txt  dbus_send_recv.c  method_recv_struct.c  method_send_struct.c
